Update GitHub Actions workflow to use latest actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,17 +5,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Build with Buildozer
-        uses: ArtemGr/buildozer-action@v1
+        uses: ArtemSBulgakov/buildozer-action@v1
+        id: buildozer
         with:
           command: buildozer android debug
           buildozer_version: master
 
       - name: Upload APK
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: SXL-Installer
+          # Usar a saída direta do buildozer é mais seguro que bin/*.apk
           path: bin/*.apk
-
