Modify workflow for Android builds and dependencies
Updated the GitHub Actions workflow to use Ubuntu 22.04 and added Python setup and dependency installation steps.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,21 +3,31 @@ on: [push, workflow_dispatch]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04 # Versão estável para builds Android
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Build with Buildozer
-        uses: ArtemSBulgakov/buildozer-action@v1
-        id: buildozer
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          command: buildozer android debug
-          buildozer_version: master
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y git zip unzip openjdk-17-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev
+          pip install --upgrade pip
+          pip install buildozer cython==0.29.33
+
+      - name: Build with Buildozer
+        run: |
+          yes | buildozer android debug
+        # O 'yes |' aceita automaticamente as licenças do Android SDK
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: SXL-Installer
-          # Usar a saída direta do buildozer é mais seguro que bin/*.apk
           path: bin/*.apk
